Polishing: migrated DefaultGcLogService